--- a/proyectosena/src/main/resources/application.properties
+++ b/proyectosena/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=proyectosena
+server.port=8080
+logging.level.root=INFO
+logging.level.org.springframework.security=DEBUG
+spring.datasource.url=jdbc:mysql://localhost:3306/proyecto_sena
+spring.datasource.username=root
+spring.datasource.password=Colombia50*
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+spring.jpa.hibernate.ddl-auto= update
